force-app/main/default/objects/Account/fields/Mynumber__c.field-meta.xml
<CustomField>
    <fullName>Mynumber__c</fullName>
    <label>Mynumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>