force-app/main/default/objects/Account/fields/MyPhone__c.field-meta.xml
<CustomField>
    <fullName>MyPhone__c</fullName>
    <label>MyPhone</label>
    <type>Phone</type>
</CustomField>